Integrated swagger for auth routes.
